storage/innobase/row/row0vers.cc
@@ -456,6 +456,7 @@ row_vers_build_clust_v_col(
 	byte*		record= 0;
 
 	ut_ad(dict_index_has_virtual(index));
+	ut_ad(index->table == clust_index->table);
 
 	if (vcol_info != NULL) {
 		vcol_info->set_used();
